<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context=".ui.car.list.CarListFragment"
        android:layout_marginStart="@dimen/margin_layout"
        android:layout_marginEnd="@dimen/margin_layout">

    <androidx.constraintlayout.widget.Group
            android:layout_width="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="progressBar_listLoading,textView_listLoading"
            android:id="@+id/group_listLoading"/>

    <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/progressBar_listLoading"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/progressBar_listLoading"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView_listLoading"
            android:text="@string/loading"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/layout_topBar">

        <Button android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"
                android:id="@+id/button_close"
                android:drawableStart="@drawable/ic_close"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>

        <Button android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/button_filter"
                android:drawableStart="@drawable/ic_filter"
                android:textSize="@dimen/text_button"
                android:text="@string/filter"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>

        <Button android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/button_filter"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/button_sort"
                android:src="@drawable/ic_sort"
                android:textSize="@dimen/text_button"
                android:text="@string/sort"
                android:drawableStart="@drawable/ic_sort"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>

        <androidx.constraintlayout.widget.Group
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/group_filter"
                android:visibility="gone"
                app:constraint_referenced_ids="textView_plateNumberFilterInfo,inputText_plateNumberInput,layout_filter"/>

        <TextView
                android:layout_width="0dp"
                android:id="@+id/textView_plateNumberFilterInfo"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/button_close"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/plate_number"
                android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputText_plateNumberInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/textView_plateNumberFilterInfo"
                app:layout_constraintStart_toStartOf="parent"
                android:textStyle="normal"
                android:textSize="@dimen/text_input"
                android:hint="@string/input_vehicle_plate_number"/>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputText_plateNumberInput"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/layout_filter"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/filter_by_remaining_battery_level"
                    android:id="@+id/textView_batteryLevelFilterInfo"
                    android:textStyle="bold"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/zero"
                    android:id="@+id/textView_batteryLevelProgress"/>

            <SeekBar
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView_batteryLevelFilterInfo"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/seekBar_batteryLevel"
                    android:layout_weight="0.10"
                    android:progress="0"
                    android:max="100"/>

            <Button android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/apply_filter"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/seekBar_batteryLevel"
                    style="@style/Widget.MaterialComponents.Button"
                    android:textSize="@dimen/text_button"
                    android:id="@+id/button_applyFilter"/>

            <Button android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/clear_filter"
                    app:layout_constraintEnd_toStartOf="@id/button_applyFilter"
                    app:layout_constraintTop_toBottomOf="@id/seekBar_batteryLevel"
                    style="@style/Widget.MaterialComponents.Button"
                    android:textSize="@dimen/text_button"
                    android:id="@+id/button_clearFilter"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_carList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/layout_topBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
    </androidx.recyclerview.widget.RecyclerView>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_emptyList"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/margin_top_large"
            android:visibility="gone"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/layout_topBar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <ImageView
                android:layout_width="0dp"
                android:layout_height="200dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/ic_search"
                android:id="@+id/imageView_emptyListImage"
                android:contentDescription="@string/content_description_empty_list_image"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageView_emptyListImage"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center_horizontal"
                android:text="@string/cannot_find_cars_for_this_filter_try_changing_the_filter"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>